Closed Bug 1557858 Opened 5 years ago Closed 5 years ago

Assertion failure: !mWrBridge || mWrBridge == aWrBridge, at src/gfx/layers/wr/WebRenderImageHost.cpp:245

Categories

(Core :: Graphics: WebRender, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla70
Tracking Status
firefox-esr60 --- disabled
firefox-esr68 --- disabled
firefox68 --- wontfix
firefox69 --- wontfix
firefox70 --- fixed

People

(Reporter: tsmith, Assigned: sotaro)

References

(Blocks 2 open bugs)

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file testcase.html

Reduced with m-c:
BuildID=20190604034844
SourceStamp=c909c105f914f69054b9a7c6b189ee39fa1cad44

The attached test case requires dom.disable_open_during_load=true

Assertion failure: !mWrBridge || mWrBridge == aWrBridge, at src/gfx/layers/wr/WebRenderImageHost.cpp:245

#0 mozilla::layers::WebRenderImageHost::SetWrBridge(mozilla::layers::WebRenderBridgeParent*) src/gfx/layers/wr/WebRenderImageHost.cpp:244:3
#1 mozilla::layers::WebRenderBridgeParent::AddPipelineIdForCompositable(mozilla::wr::PipelineId const&, mozilla::layers::CompositableHandle const&, bool const&, mozilla::wr::TransactionBuilder&, mozilla::wr::TransactionBuilder&, mozilla::wr::RenderRoot const&) src/gfx/layers/wr/WebRenderBridgeParent.cpp:1533:11
#2 mozilla::layers::WebRenderBridgeParent::ProcessWebRenderParentCommands(nsTArray<mozilla::layers::WebRenderParentCommand> const&, mozilla::wr::TransactionBuilder&, mozilla::wr::RenderRoot) src/gfx/layers/wr/WebRenderBridgeParent.cpp:1312:9
#3 mozilla::layers::WebRenderBridgeParent::RecvSetDisplayList(nsTArray<mozilla::layers::RenderRootDisplayListData>&&, nsTArray<mozilla::layers::OpDestroy>&&, unsigned long const&, mozilla::layers::BaseTransactionId<mozilla::layers::TransactionIdType> const&, mozilla::wr::IdNamespace const&, bool const&, mozilla::layers::BaseTransactionId<mozilla::VsyncIdType> const&, mozilla::TimeStamp const&, mozilla::TimeStamp const&, mozilla::TimeStamp const&, nsTString<char> const&, mozilla::TimeStamp const&, nsTArray<mozilla::layers::CompositionPayload>&&) src/gfx/layers/wr/WebRenderBridgeParent.cpp:1064:9
#4 mozilla::layers::PWebRenderBridgeParent::OnMessageReceived(IPC::Message const&) src/obj-firefox/ipc/ipdl/PWebRenderBridgeParent.cpp:406:28
#5 mozilla::layers::PCompositorManagerParent::OnMessageReceived(IPC::Message const&) src/obj-firefox/ipc/ipdl/PCompositorManagerParent.cpp:200:32
#6 mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) src/ipc/glue/MessageChannel.cpp:2158:25
#7 mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) src/ipc/glue/MessageChannel.cpp:2082:9
#8 mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) src/ipc/glue/MessageChannel.cpp:1939:3
#9 mozilla::ipc::MessageChannel::MessageTask::Run() src/ipc/glue/MessageChannel.cpp:1970:13
#10 MessageLoop::RunTask(already_AddRefed<nsIRunnable>) src/ipc/chromium/src/base/message_loop.cc:442:9
#11 MessageLoop::DeferOrRunPendingTask(MessageLoop::PendingTask&&) src/ipc/chromium/src/base/message_loop.cc:450:5
#12 MessageLoop::DoWork() src/ipc/chromium/src/base/message_loop.cc:523:13
#13 base::MessagePumpDefault::Run(base::MessagePump::Delegate*) src/ipc/chromium/src/base/message_pump_default.cc:35:31
#14 MessageLoop::RunInternal() src/ipc/chromium/src/base/message_loop.cc:315:10
#15 MessageLoop::Run() src/ipc/chromium/src/base/message_loop.cc:290:3
#16 base::Thread::ThreadMain() src/ipc/chromium/src/base/thread.cc:192:16
#17 ThreadFunc(void*) src/ipc/chromium/src/base/platform_thread_posix.cc:40:13
#18 start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x76b9)
Flags: in-testsuite?

The priority flag is not set for this bug.
:jbonisteel, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jbonisteel)
Flags: needinfo?(jbonisteel)
Priority: -- → P3
Assignee: nobody → sotaro.ikeda.g
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a68132c5a5c3
Add multiple WebRenderBridgeParents support in WebRenderImageHost r=nical
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: