Bug 1557858 - Add multiple WebRenderBridgeParents support in WebRenderImageHost r=nical

Uses wr::PipelineId to identify user of WebRenderImageHost.

Differential Revision: https://phabricator.services.mozilla.com/D42462